[package]
name = "stopwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
glyphon = "0.10.0"
image = "0.25.8"
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol = "2.0.2"
wgpu = "28.0.0"
winit = "0.30.12"
